// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineDiagram it renders 1`] = `
Array [
  <div
    className="m-schedule-line-diagram__stop"
  >
    <div
      className="m-schedule-line-diagram__card-left"
    >
      <div
        className="m-schedule-line-diagram__stop-name"
      >
        <a
          href="/stops/5547"
        >
          Elm St opp Haskell Ave
        </a>
      </div>
      <div
        className="m-schedule-line-diagram__connections"
      >
        <span
          className="c-icon__bus-pill m-schedule-line-diagram__connection u-bg--bus"
        >
          110
        </span>
      </div>
    </div>
    <div>
      <div
        className="m-schedule-line-diagram__features"
      >
        <span
          className="c-icon__cr-zone m-schedule-line-diagram__feature-icon"
        >
          Zone 1A
        </span>
      </div>
    </div>
  </div>,
  <div
    className="m-schedule-line-diagram__stop"
  >
    <div
      className="m-schedule-line-diagram__card-left"
    >
      <div
        className="m-schedule-line-diagram__stop-name"
      >
        <a
          href="/stops/place-north"
        >
          North Station
        </a>
      </div>
      <div
        className="m-schedule-line-diagram__connections"
      >
        <span
          className="m-schedule-line-diagram__connection"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </span>
        <span
          className="m-schedule-line-diagram__connection"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </span>
        <span
          className="m-schedule-line-diagram__connection"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </span>
        <span
          className="m-schedule-line-diagram__connection"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </span>
      </div>
    </div>
    <div>
      <div
        className="m-schedule-line-diagram__features"
      >
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-parking-default m-schedule-line-diagram__feature-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-acessible-default m-schedule-line-diagram__feature-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          className="c-icon__cr-zone m-schedule-line-diagram__feature-icon"
        >
          Zone 1A
        </span>
      </div>
    </div>
  </div>,
  <div
    className="m-schedule-line-diagram__stop"
  >
    <div
      className="m-schedule-line-diagram__card-left"
    >
      <div
        className="m-schedule-line-diagram__stop-name"
      >
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-alerts-triangle"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          className="sr-only"
        >
          Service alert or delay
        </span>
         
        <a
          href="/stops/place-alfcl"
        >
          Alewife
        </a>
      </div>
      <div
        className="m-schedule-line-diagram__connections"
      >
        <span
          className="c-icon__bus-pill m-schedule-line-diagram__connection u-bg--bus"
        >
          62
        </span>
        <span
          className="c-icon__bus-pill m-schedule-line-diagram__connection u-bg--bus"
        >
          67
        </span>
        <span
          className="c-icon__bus-pill m-schedule-line-diagram__connection u-bg--bus"
        >
          76
        </span>
        <span
          className="c-icon__bus-pill m-schedule-line-diagram__connection u-bg--bus"
        >
          79
        </span>
        <span
          className="c-icon__bus-pill m-schedule-line-diagram__connection u-bg--bus"
        >
          84
        </span>
        <span
          className="c-icon__bus-pill m-schedule-line-diagram__connection u-bg--bus"
        >
          350
        </span>
        <span
          className="c-icon__bus-pill m-schedule-line-diagram__connection u-bg--bus"
        >
          351
        </span>
      </div>
    </div>
    <div>
      <div
        className="m-schedule-line-diagram__features"
      >
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-parking-default m-schedule-line-diagram__feature-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <span
          aria-hidden="false"
          className="notranslate c-svg__icon-acessible-default m-schedule-line-diagram__feature-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`can render green line 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Eastbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <Component>
          <div
            className="m-schedule-direction__route-pattern m-schedule-direction__route-pattern--clickable"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
          >
            All branches
             
            <span
              aria-hidden="true"
              className="notranslate c-svg__icon m-schedule-direction__route-pattern-arrow"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </div>
        </Component>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;

exports[`it renders a bus component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <Component>
          <div
            className="m-schedule-direction__route-pattern"
            onClick={[Function]}
            onKeyUp={[Function]}
          >
            Pattern 2
             
          </div>
        </Component>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;

exports[`it renders a subway component 1`] = `
<ScheduleDirection>
  <div
    className="m-schedule-direction"
  >
    <div
      className="m-schedule-direction__direction"
      id="direction-name"
    >
      Inbound
    </div>
    <ScheduleDirectionMenu>
      <div
        className="js-m-schedule-click-boundary"
      >
        <div
          className="m-schedule-direction__route-pattern"
        >
          End
        </div>
      </div>
    </ScheduleDirectionMenu>
    <ScheduleDirectionButton>
      <button
        className="m-schedule-direction__button btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="notranslate m-schedule-direction__icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Change Direction
      </button>
    </ScheduleDirectionButton>
  </div>
</ScheduleDirection>
`;
